# ghcp-ui

./: .env.example  .gitignore  docker-compose.yml
.github/: copilot-instructions.md
.github/skills/assess-delivery-date-risk/: SKILL.md
.github/skills/assess-safety-and-feasibility/: SKILL.md
.github/skills/assess-visit-readiness/: SKILL.md
scheduling/: .gitignore  Dockerfile  README.md  pyproject.toml
scheduling/app/: __init__.py  __main__.py  aggregator.py  cleaner.py  csv_loader.py  export_payloads.py  mcp_server.py  models.py  orchestrator.py  raw_generator.py  render.py  run.py  sla_guardrail.py
scheduling/app/integrations/: __init__.py
scheduling/app/integrations/pso/: __init__.py  client.py  geocoder.py  mappings.py  pgeocode_geocoder.py  push.py  translator.py
scheduling/app/skills/: __init__.py  assess_date_risk.py  assess_safety.py  assess_visit_readiness.py  extract_constraints.py  lookup_delay_history.py
scheduling/app/tests/: test_assess_date_risk.py  test_assess_safety.py  test_assess_visit_readiness.py  test_end_to_end.py  test_extract_constraints.py  test_lookup_delay_history.py  test_postcode_uniqueness.py  test_pso_client.py  test_pso_geocoder.py  test_pso_translator.py  test_raw_to_cleaned_roundtrip.py  test_sla_guardrail.py
scheduling/app/tests/snapshots/pso/: ONEA73446139.xml  ONEA78030061.xml  ONEA92160383.xml
scheduling/data/: work_orders.csv  work_orders_raw.csv
scheduling/docs/: architecture.drawio  demo-script.md  requirements.md
src/client/: index.html
src/client/src/: App.tsx
tests/: app.spec.ts
(+12 files in other folders)
